@@ -1,4 +1,8 @@
 ---
+
+* Updated JJY reference clock driver from Takao abe
+
+---
 (4.2.4p7-RC5) 2009/05/02 Released by Harlan Stenn <stenn@ntp.org>
 
 * [Bug 1172] 4.2.4p7-RC{3,4} fail to build on linux.
